<resources>
    <string name="layout_scan">扫描二维码</string>
    <string name="layout_album">相册</string>
    <string name="layout_focus_qrcode">请对准二维码进行扫描</string>
    <string name="note_identify_failed">识别失败</string>
    <string name="note_scan_failed">扫描失败</string>
    <string name="note_no_flashlight">暂时无法开启闪光灯</string>
    <string name="app_name">TC支付监控端</string>
    <string name="HelpActivity">帮助文档</string>
    <string name="SettingActivity">软件设置</string>
    <string name="url">通知地址：请手动配置</string>
    <string name="key">通讯密钥：请手动配置</string>
    <string name="sm">扫码配置</string>
    <string name="pz">手动配置</string>
    <string name="xt">检测心跳</string>
    <string name="jt">检测监听</string>
    <string name="admin">后台管理</string>
    <string name="ht_state">监控日志(删除)：</string>
    <string name="dl"></string>
    <string name="bq">Copyright © 2026 paysys.thunder-cloud.online · 版权所有</string>
    <string name="gy">关于/帮助</string>
    <string name="setting">软件设置</string>
    <string name="tc">退出程序</string>
    <string name="qx">ThunderCloud监听服务[必选]</string>
    <string name="help_title">ThunderCloud免签支付监控端配置文档</string>
    <string name="help_content">1.0 必须要在安装监控端手机上登录同一个微信或支付宝账户否则不能监听回调(后台上传哪个账户的收款码就登录哪个账户)\n\n

        1.1 您可以通过扫描后台二维码或保存截图至相册配置\n\n

        1.2 ThunderCloud免签支付监控端并不适配所有手机，当您的手机无法正常运行时请使用云手机或更换Android手机(请勿使用模拟器登录微信)\n\n

        1.3 在使用过程中软件申请的权限是必然的，您必须给予相应权限否则软件无法正常运行\n\n

        1.4 请设置软件自启动后台运行和忽略电池白名单优化，锁定WiFi(待机后WiFi将不会休眠)关闭省电模式等权限并保持监控端24H可持久化后台运行\n\n

        感谢您使用ThunderCloud免签支付监控端，使用过程中若您发现任何BUG可以通过邮箱向我致信！\n\n
    </string>
    <string name="help_content2">
        2.以下设置“参考”图片中内容配置
    </string>
    <string name="help_01">登录ThunderCloud后台复制配置数据</string>
    <string name="help_02">监控端配置数据</string>
    <string name="help_03">开启微信通知权限</string>
    <string name="help_04">开启支付宝通知权限</string>
    <string name="help_05">开启ThunderCloud免签支付监控端自启动权限[允许后台运行]</string>
    <string name="help_06">勾选不允许电池优化</string>
    <string name="help_07">将软件锁定后台</string>

</resources>
